~ save point
Lots of cleanup remaining, but things look like they work again...